# -Cloud-Backup

client/: CMakeLists.txt  client.hpp  data.hpp  util.hpp
client/backup/: Client.cpp  client.hpp
server/: CMakeLists.txt  Server.cpp  cloud.json  config.hpp  data.hpp  hot.hpp  service.hpp  util.hpp
server/packdir/: Client.cpp.lz  client.hpp.lz
